--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    style="@style/ScreenBackground"
     android:orientation="vertical"
     android:padding="@dimen/_8sdp"
     tools:context=".ui.bottomNavBar.CalendarFragment">
@@ -22,7 +22,6 @@
                 android:id="@+id/calendar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
                 android:text="@string/calendar"
                 android:textColor="@color/dark_blue"
                 android:textSize="@dimen/_20sdp"
@@ -34,11 +33,11 @@
                 android:id="@+id/btn_template"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rectangle_1"
-                android:backgroundTint="@color/white"
+                android:background="@drawable/rectangle"
+                android:backgroundTint="@android:color/transparent"
                 android:onClick="toggleView"
                 android:text="Month"
-                android:textColor="@color/dark_blue"
+                android:textColor="@color/blue2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
