--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/_8sdp"
-    android:background="@color/white"
-    tools:context=".ui.AddNotesActivity">
+    style="@style/ScreenBackground"
+    tools:context=".ui.AddNotesActivity"
+    android:id="@+id/add_notes">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@
                     android:id="@+id/btn_back_arrow"
                     android:layout_width="@dimen/_32sdp"
                     android:layout_height="@dimen/_32sdp"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@android:color/transparent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/round_arrow_back" />
@@ -36,26 +37,26 @@
                     android:layout_width="@dimen/_32sdp"
                     android:layout_height="@dimen/_32sdp"
                     android:layout_marginEnd="@dimen/_64sdp"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@android:color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/outline_push_pin" />
 
                 <ImageButton
-                    android:id="@+id/btn_reminder"
+                    android:id="@+id/btn_color"
                     android:layout_width="@dimen/_32sdp"
                     android:layout_height="@dimen/_32sdp"
                     android:layout_marginEnd="@dimen/_32sdp"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@android:color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/outline_notification_add" />
+                    app:srcCompat="@drawable/outline_color_lens" />
 
                 <ImageButton
                     android:id="@+id/btn_archieve"
                     android:layout_width="@dimen/_32sdp"
                     android:layout_height="@dimen/_32sdp"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@android:color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/outline_archive" />
@@ -71,7 +72,8 @@
             android:layout_marginEnd="@dimen/_8sdp"
             android:hint="@string/judul"
             android:textColorHint="@color/light_blue"
-            android:textColor="@color/black"
+            style="@style/TextColor"
+            android:textStyle="bold"
             android:textSize="@dimen/_16sdp" />
 
         <TextView
@@ -82,7 +84,7 @@
             android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginEnd="@dimen/_8sdp"
             android:hint="@string/tanggal"
-            android:textColor="@color/black"
+            style="@style/TextColor"
             android:textColorHint="@color/light_blue"
             android:textSize="@dimen/_10sdp" />
 
@@ -107,7 +109,7 @@
             android:inputType="textMultiLine"
             android:hint="@string/catatan"
             android:textColorHint="@color/light_blue"
-            android:textColor="@color/black"
+            style="@style/TextColor"
             android:textSize="@dimen/_12sdp" />
 
     </LinearLayout>
