--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    style="@style/ScreenBackground"
     android:padding="@dimen/_10sdp"
     tools:context=".ui.bottomNavBar.HomeFragment">
 
@@ -27,7 +27,6 @@
                     android:id="@+id/notes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/white"
                     android:text="@string/app_name"
                     android:textColor="@color/dark_blue"
                     android:textSize="@dimen/_20sdp"
@@ -39,7 +38,7 @@
                     android:id="@+id/btn_list"
                     android:layout_width="@dimen/_32sdp"
                     android:layout_height="@dimen/_32sdp"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@android:color/transparent"
                     android:onClick="toggleView"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +55,7 @@
             android:layout_margin="@dimen/_8sdp"
             android:background="@drawable/rectangle_1"
             android:elevation="@dimen/_5sdp"
-            android:textSize="@dimen/_14sdp"/>
+            android:textSize="@dimen/_14sdp" />
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
