--- a/app/src/main/res/layout/fragment_monthly.xml
+++ b/app/src/main/res/layout/fragment_monthly.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    style="@style/ScreenBackground"
     android:orientation="vertical"
     android:padding="@dimen/_8sdp"
     tools:context=".ui.calendar.MonthlyFragment">
@@ -19,8 +19,8 @@
             android:layout_width="@dimen/_32sdp"
             android:layout_height="@dimen/_32sdp"
             android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:src="@drawable/round_arrow_back" />
+            android:backgroundTint="@android:color/transparent"
+            android:src="@drawable/round_arrow_back2" />
 
         <TextView
             android:id="@+id/tv_month"
@@ -30,14 +30,14 @@
             android:text="Month"
             android:textAlignment="center"
             android:textSize="@dimen/_20sdp"
-            android:textColor="@color/dark_blue"/>
+            android:textColor="@color/palette1_1"/>
 
         <ImageButton
             android:id="@+id/next_button"
             android:layout_width="@dimen/_32sdp"
             android:layout_height="@dimen/_32sdp"
             android:layout_weight="1"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@android:color/transparent"
             android:src="@drawable/round_arrow_forward" />
 
     </LinearLayout>
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/sunday"
-            android:textColor="@color/blue2"
+            android:textColor="@color/palette1_2"
             android:textAlignment="center"
             android:textSize="@dimen/_16sdp"/>
 
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/monday"
-            android:textColor="@color/blue2"
+            android:textColor="@color/palette1_2"
             android:textAlignment="center"
             android:textSize="@dimen/_16sdp"/>
 
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/tuesday"
-            android:textColor="@color/blue2"
+            android:textColor="@color/palette1_2"
             android:textAlignment="center"
             android:textSize="@dimen/_16sdp"/>
 
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/wednesday"
-            android:textColor="@color/blue2"
+            android:textColor="@color/palette1_2"
             android:textAlignment="center"
             android:textSize="@dimen/_16sdp"/>
 
@@ -92,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/thursday"
-            android:textColor="@color/blue2"
+            android:textColor="@color/palette1_2"
             android:textAlignment="center"
             android:textSize="@dimen/_16sdp"/>
 
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/friday"
-            android:textColor="@color/blue2"
+            android:textColor="@color/palette1_2"
             android:textAlignment="center"
             android:textSize="@dimen/_16sdp"/>
 
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/saturday"
-            android:textColor="@color/blue2"
+            android:textColor="@color/palette1_2"
             android:textAlignment="center"
             android:textSize="@dimen/_16sdp"/>
 
