--- a/app/src/main/res/layout/fragment_weekly.xml
+++ b/app/src/main/res/layout/fragment_weekly.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    style="@style/ScreenBackground"
     android:orientation="vertical"
     android:padding="@dimen/_8sdp"
     tools:context=".ui.calendar.WeeklyFragment">
@@ -24,8 +24,8 @@
                 android:layout_width="@dimen/_32sdp"
                 android:layout_height="@dimen/_32sdp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/white"
-                android:src="@drawable/round_arrow_back" />
+                android:backgroundTint="@android:color/transparent"
+                android:src="@drawable/round_arrow_back2" />
 
             <TextView
                 android:id="@+id/tv_month"
@@ -34,7 +34,7 @@
                 android:layout_weight="2"
                 android:text="Month"
                 android:textAlignment="center"
-                android:textColor="@color/dark_blue"
+                android:textColor="@color/palette1_1"
                 android:textSize="@dimen/_20sdp" />
 
             <ImageButton
@@ -42,7 +42,7 @@
                 android:layout_width="@dimen/_32sdp"
                 android:layout_height="@dimen/_32sdp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@android:color/transparent"
                 android:src="@drawable/round_arrow_forward" />
 
         </LinearLayout>
@@ -59,7 +59,7 @@
                 android:layout_weight="1"
                 android:text="@string/sunday"
                 android:textAlignment="center"
-                android:textColor="@color/blue2"
+                android:textColor="@color/palette1_2"
                 android:textSize="@dimen/_16sdp" />
 
             <TextView
@@ -69,7 +69,7 @@
                 android:layout_weight="1"
                 android:text="@string/monday"
                 android:textAlignment="center"
-                android:textColor="@color/blue2"
+                android:textColor="@color/palette1_2"
                 android:textSize="@dimen/_16sdp" />
 
             <TextView
@@ -79,7 +79,7 @@
                 android:layout_weight="1"
                 android:text="@string/tuesday"
                 android:textAlignment="center"
-                android:textColor="@color/blue2"
+                android:textColor="@color/palette1_2"
                 android:textSize="@dimen/_16sdp" />
 
             <TextView
@@ -89,7 +89,7 @@
                 android:layout_weight="1"
                 android:text="@string/wednesday"
                 android:textAlignment="center"
-                android:textColor="@color/blue2"
+                android:textColor="@color/palette1_2"
                 android:textSize="@dimen/_16sdp" />
 
             <TextView
@@ -99,7 +99,7 @@
                 android:layout_weight="1"
                 android:text="@string/thursday"
                 android:textAlignment="center"
-                android:textColor="@color/blue2"
+                android:textColor="@color/palette1_2"
                 android:textSize="@dimen/_16sdp" />
 
             <TextView
@@ -109,7 +109,7 @@
                 android:layout_weight="1"
                 android:text="@string/friday"
                 android:textAlignment="center"
-                android:textColor="@color/blue2"
+                android:textColor="@color/palette1_2"
                 android:textSize="@dimen/_16sdp" />
 
             <TextView
@@ -119,7 +119,7 @@
                 android:layout_weight="1"
                 android:text="@string/saturday"
                 android:textAlignment="center"
-                android:textColor="@color/blue2"
+                android:textColor="@color/palette1_2"
                 android:textSize="@dimen/_16sdp" />
 
         </LinearLayout>
