--- a/app/src/main/res/layout/item_row_note.xml
+++ b/app/src/main/res/layout/item_row_note.xml
@@ -9,55 +9,71 @@
     android:layout_marginTop="@dimen/_5sdp"
     android:layout_marginEnd="@dimen/_10sdp"
     android:layout_marginBottom="@dimen/_5sdp"
-    app:cardBackgroundColor="@color/light_blue"
-    app:cardCornerRadius="@dimen/_16sdp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="@dimen/_20sdp"
     app:cardElevation="@dimen/_8sdp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/_10sdp">
-        <RelativeLayout
+        android:padding="@dimen/_12sdp">
+        <ImageButton
+            android:id="@+id/btn_pin"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:backgroundTint="@android:color/transparent"
+            app:srcCompat="@drawable/outline_push_pin"
+            android:visibility="gone"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="@dimen/_20sdp">
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
+                android:layout_marginEnd="@dimen/_32sdp"
                 android:text="Judul"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_14sdp"
                 android:textStyle="bold"/>
 
+            <View
+                android:layout_marginBottom="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_1sdp"
+                android:background="@color/gray"/>
+
             <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
+                android:id="@+id/desc"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="@dimen/_5sdp"
                 android:textSize="@dimen/_10sdp"
-                android:textColor="@color/gray"
-                android:text="Tanggal"/>
+                android:textColor="@color/black"
+                android:text="Deskripsi"
+                android:maxLines="5"/>
 
-        </RelativeLayout>
-
-        <View
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:background="@color/gray"/>
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/desc"
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/black"
-            android:text="Deskripsi"
-            android:maxLines="5"/>
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:text="Tanggal"
+            android:textAlignment="textEnd"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/_10sdp" />
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
