--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Notes" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.Notes.Dark" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue2</item>
         <item name="colorPrimaryVariant">@color/dark_blue</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/green</item>
         <item name="colorSecondaryVariant">@color/green_dark</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/black</item>
@@ -16,13 +16,13 @@
     </style>
 
     <style name="ScreenBackground">
-        <item name="background">@color/black</item>
+        <item name="android:background">@color/black</item>
     </style>
     <style name="CardBackground">
-        <item name="background">@color/black</item>
+        <item name="android:background">@color/black</item>
     </style>
     <style name="TextColor">
-        <item name="background">@color/white</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
