--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,14 +15,19 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
+    </style>
+
     <style name="ScreenBackground">
-        <item name="background">@color/white</item>
+        <item name="android:background">@color/white</item>
     </style>
     <style name="CardBackground">
-        <item name="background">@color/white</item>
+        <item name="android:background">@color/white</item>
     </style>
     <style name="TextColor">
-        <item name="background">@color/black</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.Notes" parent="Base.Theme.Notes" />
