--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -16,51 +16,11 @@
         android:padding="@dimen/_10sdp">
 
         <TextView
-            android:id="@+id/akun"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
-            android:text="@string/akun"
-            android:textSize="@dimen/_12sdp"
-            android:textColor="@color/dark_blue"/>
-
-        <TableRow
-            android:id="@+id/profile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5sdp">
-
-            <ImageView
-                android:id="@+id/img_profile"
-                android:layout_width="@dimen/_32sdp"
-                android:layout_height="@dimen/_32sdp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:foreground="@drawable/round_person"
-                android:foregroundGravity="center"
-                android:src="@drawable/rectangle" />
-
-            <TextView
-                android:id="@+id/tv_profile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_12sdp"
-                android:text="@string/google_data"
-                style="@style/TextColor"
-                android:textSize="@dimen/_12sdp" />
-        </TableRow>
-
-        <TextView
             android:id="@+id/umum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10sdp"
-            android:text="@string/umum"
+            android:text="@string/pengaturan"
             android:textSize="@dimen/_12sdp"
             android:textColor="@color/dark_blue"/>
 
@@ -99,7 +59,7 @@
                 android:id="@+id/switch_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginEnd="@dimen/_8sdp" />
 
         </TableRow>
@@ -135,142 +95,6 @@
                 android:textSize="@dimen/_12sdp"
                 style="@style/TextColor"
                 android:text="@string/pilihan_bahasa"/>
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/arsip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5sdp"
-            android:clickable="true">
-
-            <ImageView
-                android:id="@+id/img_arsip"
-                android:layout_width="@dimen/_32sdp"
-                android:layout_height="@dimen/_32sdp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:foreground="@drawable/round_archive"
-                android:foregroundGravity="center"
-                android:src="@drawable/rectangle" />
-
-            <TextView
-                android:id="@+id/tv_arsip"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_12sdp"
-                android:text="@string/arsip"
-                style="@style/TextColor"
-                android:textSize="@dimen/_12sdp" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/sandi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5sdp">
-
-            <ImageView
-                android:id="@+id/img_sandi"
-                android:layout_width="@dimen/_32sdp"
-                android:layout_height="@dimen/_32sdp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:foreground="@drawable/round_lock"
-                android:foregroundGravity="center"
-                android:src="@drawable/rectangle" />
-
-            <TextView
-                android:id="@+id/tv_sandi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_12sdp"
-                android:textSize="@dimen/_12sdp"
-                style="@style/TextColor"
-                android:text="@string/atur_kata_sandi"/>
-        </TableRow>
-
-
-        <TableRow
-            android:id="@+id/berbagi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5sdp">
-
-            <ImageView
-                android:id="@+id/img_berbagi"
-                android:layout_width="@dimen/_32sdp"
-                android:layout_height="@dimen/_32sdp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:foreground="@drawable/round_share"
-                android:foregroundGravity="center"
-                android:src="@drawable/rectangle" />
-
-            <TextView
-                android:id="@+id/tv_berbagi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_12sdp"
-                android:textSize="@dimen/_12sdp"
-                style="@style/TextColor"
-                android:text="@string/berbagi"/>
-        </TableRow>
-
-
-        <TextView
-            android:id="@+id/lainnya"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
-            android:text="@string/lainnya"
-            android:textSize="@dimen/_12sdp"
-            android:textColor="@color/dark_blue"/>
-
-        <TableRow
-            android:id="@+id/saran"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_5sdp">
-
-            <ImageView
-                android:id="@+id/img_saran"
-                android:layout_width="@dimen/_32sdp"
-                android:layout_height="@dimen/_32sdp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:foreground="@drawable/round_help_outline"
-                android:foregroundGravity="center"
-                android:src="@drawable/rectangle" />
-
-            <TextView
-                android:id="@+id/tv_saran"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_12sdp"
-                android:textSize="@dimen/_12sdp"
-                style="@style/TextColor"
-                android:text="@string/saran"/>
         </TableRow>
 
         <TableRow
