--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,6 +29,12 @@
     <style name="TextColor">
         <item name="android:textColor">@color/black</item>
     </style>
+    
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.Notes</item>
+    </style>
 
     <style name="Theme.Notes" parent="Base.Theme.Notes" />
 </resources>
