--- a/app/src/main/res/layout/fragment_weekly.xml
+++ b/app/src/main/res/layout/fragment_weekly.xml
@@ -139,11 +139,18 @@
             android:layout_marginEnd="@dimen/_8sdp"
             android:background="@color/light_gray"/>
 
-        <androidx.recyclerview.widget.RecyclerView
+        <FrameLayout
             android:id="@+id/main_recy_data"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="5"/>
+            android:layout_weight="5">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/event"
+                android:adjustViewBounds="true"
+                android:layout_gravity="center"/>
+        </FrameLayout>
 
     </LinearLayout>
 
